--- a/store/src/pages/custom.css
+++ b/store/src/pages/custom.css
@@ -12,3 +12,9 @@ h1 {
 .front-page{
     text-align: center;
 }
+.carousel-css{
+    background-color: rgba(255, 255, 255, 0.733);
+}
+.figure-css{
+    background-color: rgba(255, 255, 255, 0.801);
+}
